fix timeline so drawing isn't visible through it

--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,7 @@ dialog .close {
   bottom: 0;
   width: 100%;
   border: 2px solid black;
+  background-color: white;
 }
 
 .timeline label{
